removed java 16 configuration